deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wip-service-deployment
  namespace: development
  labels:
    app: wip-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wip-service-deployment
  template:
    metadata:
      labels:
        app: wip-service-deployment
    spec:
      containers:
        - name: wip-service-deployment
          image: wipregistry.azurecr.io/wiserly-inventory-planner:latest  
          ports:
            - containerPort: 5000
