service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wip-service-01
  namespace: development
spec:
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer    
  selector:
    app: wip-service


    # https://platform9.com/learn/v1.0/tutorials/nginix-controller-helm
