ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
spec:
  ingressClassName: nginx
  rules:
  - host: wiserlyonline.in
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: wip-service-01
            port:
              number: 80
